Fix badge alignment in footer navigation

--- a/app/assets/stylesheets/badges.sass
+++ b/app/assets/stylesheets/badges.sass
@@ -91,6 +91,7 @@
   .mini-badges-section
     position: relative
     margin: 27px 4px 0 0
+    float: right
     .account-badge
       margin: 0 20px 31px 0
       height: 48px
@@ -102,6 +103,7 @@
     .mini-badges-section
       margin: 0 0 15px
       display: flex
+      float: none
       .account-badge
         margin: 0 20px 20px 0
 
